Incorporate TA comments - apply fixes/updates

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <header class="topbar">
         <div class="topbar__container">
-            <a class="topbar__back-to-home" href="./"><img class="topbar__logo" src="./assets/logo/Logo-bandsite.svg" alt="Bandsite Logo"></a>
+            <a class="topbar__back-to-home" href="./"><img class="topbar__logo" src="./assets/logos/Logo-bandsite.svg" alt="Bandsite Logo"></a>
             <nav class="topbar__navigation">
                 <ul class="topbar__items">
                     <li class="topbar__item topbar__item--active"><a  class="topbar__link" href="">Biography</a></li>
-                    <li class="topbar__item"><a  class="topbar__link" href="./shows.html">Shows</a></li>
+                    <li class="topbar__item"><a  class="topbar__link" href="./pages/shows.html">Shows</a></li>
                 </ul>
             </nav>
         </div>
@@ -31,7 +31,7 @@
             <div class="about__container">
                 <h2 class="about__title">About the Musicians</h2>
                 <div class="about__content">
-                    <img class="about__image" src="./assets/images/band.jpg" alt="Live performance">
+                    <img class="about__image" src="./assets/images/band.jpg" alt="Live performance with full packed audience under dark and vibrant lights">
                     <figure class="about__quotation">
                         <blockquote>
                             <p class="about__quote">
@@ -59,31 +59,31 @@
                 <h2 class="gallery__title">Photo Gallery</h2>
                 <ul class="gallery__items">
                     <li class="gallery__item">
-                        <img class="gallery__image" src="./assets/images/Photo-gallery-1.jpg" alt="happy people during band's performances">
+                        <img class="gallery__image" src="./assets/images/Photo-gallery-1.jpg" alt="audience dancing and jamming during concert">
                     </li>
                     <li class="gallery__item">
-                        <img class="gallery__image" src="./assets/images/Photo-gallery-2.jpg" alt="happy people during band's performances">
+                        <img class="gallery__image" src="./assets/images/Photo-gallery-2.jpg" alt="Girl with sunglasses partying like no tomorrow">
                     </li>
                     <li class="gallery__item">
-                        <img class="gallery__image" src="./assets/images/Photo-gallery-3.jpg" alt="happy people during band's performances">
+                        <img class="gallery__image" src="./assets/images/Photo-gallery-3.jpg" alt="hands in the air under pink lights">
                     </li>
                     <li class="gallery__item">
-                        <img class="gallery__image" src="./assets/images/Photo-gallery-4.jpg" alt="happy people during band's performances">
+                        <img class="gallery__image" src="./assets/images/Photo-gallery-4.jpg" alt="Girl dancing and riding on a shoulder">
                     </li>
                     <li class="gallery__item">
-                        <img class="gallery__image" src="./assets/images/Photo-gallery-5.jpg" alt="happy people during band's performances">
+                        <img class="gallery__image" src="./assets/images/Photo-gallery-5.jpg" alt="fireworks as the band enters the stage">
                     </li>
                     <li class="gallery__item">
-                        <img class="gallery__image" src="./assets/images/Photo-gallery-6.jpg" alt="happy people during band's performances">
+                        <img class="gallery__image" src="./assets/images/Photo-gallery-6.jpg" alt="lead singer pointing four fingers in live performance">
                     </li>
                     <li class="gallery__item">
-                        <img class="gallery__image" src="./assets/images/Photo-gallery-7.jpg" alt="happy people during band's performances">
+                        <img class="gallery__image" src="./assets/images/Photo-gallery-7.jpg" alt="Live audience under bright rainbow lights and fireworks">
                     </li>
                     <li class="gallery__item">
-                        <img class="gallery__image" src="./assets/images/Photo-gallery-8.jpg" alt="happy people during band's performances">
+                        <img class="gallery__image" src="./assets/images/Photo-gallery-8.jpg" alt="The DJ mixing the beat">
                     </li>
                     <li class="gallery__item">
-                        <img class="gallery__image" src="./assets/images/Photo-gallery-9.jpg" alt="happy people during band's performances">
+                        <img class="gallery__image" src="./assets/images/Photo-gallery-9.jpg" alt="High energy audience, lots of confetties and lights">
                     </li>
                 </ul>
             </div>
@@ -96,7 +96,7 @@
                     <div class="conversation__thumbnail conversation__thumbnail--active">
                         <div class="conversation__avatar"><img class="conversation__image" src="./assets/images/Mohan-muruge.jpg" alt="Commenter avatar"></div>
                     </div>
-                    <form class="conversation__form" action="">
+                    <form class="conversation__form">
                         <div class="conversation__name">
                             <label class="conversation__label" for="conversation__input">Name</label>
                             <input class="conversation__input" type="text" name="name" id="conversation__input" placeholder="Enter your name" required>
@@ -117,15 +117,15 @@
     <footer class="contact">
         <div class="contact__container">
             <h2 class="contact__title">Get in Touch</h2>
-            <section class="contact__social">
+            <div class="contact__social">
                 <a class="contact__link" href="https://instagram.com/"><img class="contact__icon contact__icon--instagram" src="./assets/icons/svg/Icon-instagram.svg" alt="follow instagram"></a>
                 <a class="contact__link" href="https://facebook.com/"><img class="contact__icon contact__icon--facebook" src="./assets/icons/svg/Icon-facebook.svg" alt="follow facebook"></a>
                 <a class="contact__link" href="https://twitter.com/"><img class="contact__icon contact__icon--twitter" src="./assets/icons/svg/Icon-twitter.svg" alt="follow twitter"></a>
-            </section>
+            </div>
             <address class="contact__point">
                 <div class="contact__person">
-                    <h4 class="contact__name">Cam Adams</h4>
-                    <h4 class="contact__company">The Bees Knees Management</h4>
+                    <span class="contact__name">Cam Adams</span>
+                    <span class="contact__company">The Bees Knees Management</span>
                 </div>
                 <div class="contact__location">
                     <span class="contact__label">503 Broadway Penthouse,</span>
@@ -135,8 +135,8 @@
             </address>
             <address class="contact__point">
                 <div class="contact__person">
-                    <h4 class="contact__name">Pearl Gregg</h4>
-                    <h4 class="contact__company">Limitless Artist Group</h4>
+                    <span class="contact__name">Pearl Gregg</span>
+                    <span class="contact__company">Limitless Artist Group</span>
                 </div>
                 <div class="contact__location">
                     <span class="contact__label">Booking Agent for</span>
@@ -146,8 +146,8 @@
             </address>
             <address class="contact__point">
                 <div class="contact__person">
-                    <h4 class="contact__name">Carson Whyte</h4>
-                    <h4 class="contact__company">ARCH Entertainment</h4>    
+                    <span class="contact__name">Carson Whyte</span>
+                    <span class="contact__company">ARCH Entertainment</span>    
                 </div>
                 <div class="contact__location">
                     <span class="contact__label">Booking Agent for</span>
@@ -156,7 +156,7 @@
                 <a class="contact__email" href="mailto:cwhyte@archentertainment.com">cwhyte@archentertainment.com</a>
             </address>
 
-            <a class="contact__back-to-home" href="./index.html"><img class="contact__logo" src="./assets/logo/Logo-bandsite.svg" alt="Bandsite Logo"></a>
+            <a class="contact__back-to-home" href="./index.html"><img class="contact__logo" src="./assets/logos/Logo-bandsite.svg" alt="Bandsite Logo"></a>
             <p class="contact__copyright">Copyright The Bees Knees &#169; 2021 All Rights Reserved</p>
         </div>
     </footer>
