Complete comment like/delete functionalities

--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/bio.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="/styles/bio.css">
     <title>Bandsite | Home | BrainStation Sprint-2</title>
 </head>
 <body>
     <header class="topbar">
         <div class="topbar__container">
-            <a class="topbar__back-to-home" href="./"><img class="topbar__logo" src="./assets/logos/Logo-bandsite.svg" alt="Bandsite Logo"></a>
+            <a class="topbar__back-to-home" href="/"><img class="topbar__logo" src="/assets/logos/Logo-bandsite.svg" alt="Bandsite Logo"></a>
             <nav class="topbar__navigation">
                 <ul class="topbar__items">
                     <li class="topbar__item topbar__item--active"><a  class="topbar__link" href="">Biography</a></li>
-                    <li class="topbar__item"><a  class="topbar__link" href="./pages/shows.html">Shows</a></li>
+                    <li class="topbar__item"><a  class="topbar__link" href="/pages/shows.html">Shows</a></li>
                 </ul>
             </nav>
         </div>
@@ -31,7 +32,7 @@
             <div class="about__container">
                 <h2 class="about__title">About the Musicians</h2>
                 <div class="about__content">
-                    <img class="about__image" src="./assets/images/band.jpg" alt="Live performance with full packed audience under dark and vibrant lights">
+                    <img class="about__image" src="/assets/images/band.jpg" alt="Live performance with full packed audience under dark and vibrant lights">
                     <figure class="about__quotation">
                         <blockquote>
                             <p class="about__quote">
@@ -59,31 +60,31 @@
                 <h2 class="gallery__title">Photo Gallery</h2>
                 <ul class="gallery__items">
                     <li class="gallery__item">
-                        <img class="gallery__image" src="./assets/images/Photo-gallery-1.jpg" alt="audience dancing and jamming during concert">
+                        <img class="gallery__image" src="/assets/images/Photo-gallery-1.jpg" alt="audience dancing and jamming during concert">
                     </li>
                     <li class="gallery__item">
-                        <img class="gallery__image" src="./assets/images/Photo-gallery-2.jpg" alt="Girl with sunglasses partying like no tomorrow">
+                        <img class="gallery__image" src="/assets/images/Photo-gallery-2.jpg" alt="Girl with sunglasses partying like no tomorrow">
                     </li>
                     <li class="gallery__item">
-                        <img class="gallery__image" src="./assets/images/Photo-gallery-3.jpg" alt="hands in the air under pink lights">
+                        <img class="gallery__image" src="/assets/images/Photo-gallery-3.jpg" alt="hands in the air under pink lights">
                     </li>
                     <li class="gallery__item">
-                        <img class="gallery__image" src="./assets/images/Photo-gallery-4.jpg" alt="Girl dancing and riding on a shoulder">
+                        <img class="gallery__image" src="/assets/images/Photo-gallery-4.jpg" alt="Girl dancing and riding on a shoulder">
                     </li>
                     <li class="gallery__item">
-                        <img class="gallery__image" src="./assets/images/Photo-gallery-5.jpg" alt="fireworks as the band enters the stage">
+                        <img class="gallery__image" src="/assets/images/Photo-gallery-5.jpg" alt="fireworks as the band enters the stage">
                     </li>
                     <li class="gallery__item">
-                        <img class="gallery__image" src="./assets/images/Photo-gallery-6.jpg" alt="lead singer pointing four fingers in live performance">
+                        <img class="gallery__image" src="/assets/images/Photo-gallery-6.jpg" alt="lead singer pointing four fingers in live performance">
                     </li>
                     <li class="gallery__item">
-                        <img class="gallery__image" src="./assets/images/Photo-gallery-7.jpg" alt="Live audience under bright rainbow lights and fireworks">
+                        <img class="gallery__image" src="/assets/images/Photo-gallery-7.jpg" alt="Live audience under bright rainbow lights and fireworks">
                     </li>
                     <li class="gallery__item">
-                        <img class="gallery__image" src="./assets/images/Photo-gallery-8.jpg" alt="The DJ mixing the beat">
+                        <img class="gallery__image" src="/assets/images/Photo-gallery-8.jpg" alt="The DJ mixing the beat">
                     </li>
                     <li class="gallery__item">
-                        <img class="gallery__image" src="./assets/images/Photo-gallery-9.jpg" alt="High energy audience, lots of confetties and lights">
+                        <img class="gallery__image" src="/assets/images/Photo-gallery-9.jpg" alt="High energy audience, lots of confetties and lights">
                     </li>
                 </ul>
             </div>
@@ -94,16 +95,16 @@
                 
                 <div class="conversation__comment">
                     <div class="conversation__thumbnail conversation__thumbnail--active">
-                        <div class="conversation__avatar"><img class="conversation__image" src="./assets/images/Mohan-muruge.jpg" alt="Commenter avatar"></div>
+                        <div class="conversation__avatar"><img class="conversation__image" src="/assets/images/Mohan-muruge.jpg" alt="Commenter avatar"></div>
                     </div>
                     <form class="conversation__form">
                         <div class="conversation__name">
                             <label class="conversation__label" for="conversation__input">Name</label>
-                            <input class="conversation__input" type="text" name="name" id="conversation__input" placeholder="Enter your name" required>
+                            <input class="conversation__input" type="text" name="name" id="conversation__input" placeholder="Enter your name">
                         </div>
                         <div class="conversation__text">
                             <label class="conversation__label" for="conversation__textarea">Comment</label>
-                            <textarea class="conversation__textarea" name="textarea" id="conversation__textarea" placeholder="Add a new comment" required></textarea>
+                            <textarea class="conversation__textarea" name="textarea" id="conversation__textarea" placeholder="Add a new comment"></textarea>
                         </div>
                         <div class="conversation__submit">
                             <button class="conversation__action">Comment</button>
@@ -118,9 +119,9 @@
         <div class="contact__container">
             <h2 class="contact__title">Get in Touch</h2>
             <div class="contact__social">
-                <a class="contact__link" href="https://instagram.com/"><img class="contact__icon contact__icon--instagram" src="./assets/icons/svg/Icon-instagram.svg" alt="follow instagram"></a>
-                <a class="contact__link" href="https://facebook.com/"><img class="contact__icon contact__icon--facebook" src="./assets/icons/svg/Icon-facebook.svg" alt="follow facebook"></a>
-                <a class="contact__link" href="https://twitter.com/"><img class="contact__icon contact__icon--twitter" src="./assets/icons/svg/Icon-twitter.svg" alt="follow twitter"></a>
+                <a class="contact__link" href="https://instagram.com/"><img class="contact__icon contact__icon--instagram" src="/assets/icons/svg/Icon-instagram.svg" alt="follow instagram"></a>
+                <a class="contact__link" href="https://facebook.com/"><img class="contact__icon contact__icon--facebook" src="/assets/icons/svg/Icon-facebook.svg" alt="follow facebook"></a>
+                <a class="contact__link" href="https://twitter.com/"><img class="contact__icon contact__icon--twitter" src="/assets/icons/svg/Icon-twitter.svg" alt="follow twitter"></a>
             </div>
             <address class="contact__point">
                 <div class="contact__person">
@@ -156,7 +157,7 @@
                 <a class="contact__email" href="mailto:cwhyte@archentertainment.com">cwhyte@archentertainment.com</a>
             </address>
 
-            <a class="contact__back-to-home" href="./index.html"><img class="contact__logo" src="./assets/logos/Logo-bandsite.svg" alt="Bandsite Logo"></a>
+            <a class="contact__back-to-home" href="/index.html"><img class="contact__logo" src="/assets/logos/Logo-bandsite.svg" alt="Bandsite Logo"></a>
             <p class="contact__copyright">Copyright The Bees Knees &#169; 2021 All Rights Reserved</p>
         </div>
     </footer>
