--- a/pages/shows.html
+++ b/pages/shows.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/shows.css">
+    <link rel="stylesheet" href="/styles/shows.css">
     <title>Bandsite | Shows | BrainStation Sprint-2</title>
 </head>
 <body>
     <header class="topbar">
         <div class="topbar__container">
-            <a class="topbar__back-to-home" href="../"><img class="topbar__logo" src="../assets/logos/Logo-bandsite.svg" alt="Bandsite Logo"></a>
+            <a class="topbar__back-to-home" href="/"><img class="topbar__logo" src="/assets/logos/Logo-bandsite.svg" alt="Bandsite Logo"></a>
             <nav class="topbar__navigation">
                 <ul class="topbar__items">
-                    <li class="topbar__item"><a  class="topbar__link" href="../">Biography</a></li>
+                    <li class="topbar__item"><a  class="topbar__link" href="/">Biography</a></li>
                     <li class="topbar__item topbar__item--active"><a  class="topbar__link" href="">Shows</a></li>
                 </ul>
             </nav>
@@ -27,7 +27,7 @@
                         <span class="hero__pretitle">Beautiful Beasts Album</span>                    
                         <h1 class="hero__title">Queen of Yellow x For The Stings</h1>
                         <div class="hero__player">
-                            <iframe width="100%" height="166" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/346653733&color=%23a85470&auto_play=false&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=false"></iframe>
+                            <iframe frameborder="0" width="100%" height="166" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/346653733&color=%23a85470&auto_play=false&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=false"></iframe>
                         </div>    
                     </div>
                 </div>
@@ -39,9 +39,9 @@
         <div class="contact__container">
             <h2 class="contact__title">Get in Touch</h2>
             <div class="contact__social">
-                <a class="contact__link" href="https://instagram.com/"><img class="contact__icon contact__icon--instagram" src="../assets/icons/svg/Icon-instagram.svg" alt="follow instagram"></a>
-                <a class="contact__link" href="https://facebook.com/"><img class="contact__icon contact__icon--facebook" src="../assets/icons/svg/Icon-facebook.svg" alt="follow facebook"></a>
-                <a class="contact__link" href="https://twitter.com/"><img class="contact__icon contact__icon--twitter" src="../assets/icons/svg/Icon-twitter.svg" alt="follow twitter"></a>
+                <a class="contact__link" href="https://instagram.com/"><img class="contact__icon contact__icon--instagram" src="/assets/icons/svg/Icon-instagram.svg" alt="follow instagram"></a>
+                <a class="contact__link" href="https://facebook.com/"><img class="contact__icon contact__icon--facebook" src="/assets/icons/svg/Icon-facebook.svg" alt="follow facebook"></a>
+                <a class="contact__link" href="https://twitter.com/"><img class="contact__icon contact__icon--twitter" src="/assets/icons/svg/Icon-twitter.svg" alt="follow twitter"></a>
             </div>
             <address class="contact__point">
                 <div class="contact__person">
@@ -77,13 +77,13 @@
                 <a class="contact__email" href="mailto:cwhyte@archentertainment.com">cwhyte@archentertainment.com</a>
             </address>
 
-            <a class="contact__back-to-home" href="../"><img class="contact__logo" src="../assets/logos/Logo-bandsite.svg" alt="Bandsite Logo"></a>
+            <a class="contact__back-to-home" href="/"><img class="contact__logo" src="/assets/logos/Logo-bandsite.svg" alt="Bandsite Logo"></a>
             <p class="contact__copyright">Copyright The Bees Knees &#169; 2021 All Rights Reserved</p>
         </div>
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.1.3/axios.min.js" integrity="sha512-0qU9M9jfqPw6FKkPafM3gy2CBAvUWnYVOfNPDYKVuRTel1PrciTj+a9P3loJB+j0QmN2Y0JYQmkBBS8W+mbezg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- <script src="./scripts/utility-functions.js"></script> -->
-    <script type="module" src="../scripts/build-shows-page.js"></script>
+    <script type="module" src="/scripts/build-shows-page.js"></script>
 </body>
 </html>
